# QHexEdit

./: CMakeLists.txt  qhexeditprivate.cpp
document/: gapbuffer.cpp  qhexdocument.cpp
document/metadata/: qhexmetadata.cpp
paint/: qhexmetrics.cpp  qhexpainter.cpp
tests/: CMakeLists.txt  GapBuffer.cpp  main.cpp
